create refresh token and authenticated method
